app/assets/stylesheets/root.css.scss
/* ... */
.bid-box {
  width: 27%;
  padding: 5px;
  background-color: #eee;
  text-align: center;
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
  border-radius: 10px;
  border: 2px solid #666;
}

.search-tender {
  padding: 5px;
  background-color: #eee;
  border-radius: 10px;
  border: 2px solid #666;
}

.search-org {
  padding: 5px;
  background-color: #eee;
  border-radius: 10px;
  border: 2px solid #666;
}

.graph-row {
 margin-top: 50px;
}

.search-field {
  padding: 5px;
}


.org-box {
  padding: 5px;
  background-color: #eee;
  text-align: center;
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
  border-radius: 10px;
  border: 2px solid #666;
}

.latest-box ul {
  margin-top: 10px;
}

.latest-box li {
  font-size: .8em;
}


div.dataTables_length label {
    width: 460px;
    float: left;
    text-align: left;
}
 
div.dataTables_length select {
    width: 75px;
}
 
div.dataTables_filter label {
    float: right;
    width: 460px;
}
 
div.dataTables_info {
    padding-top: 8px;
}
 
div.dataTables_paginate {
    float: right;
    margin: 0;
}
 
table {
    margin: 1em 0;
    clear: both;
    text-align: center;
    font-size: 15px;
}

table, td, th
{
  padding:10px;
}

.main-menu {
  background-color: transparent;
  height: 70px;
  line-height: 70px;
}

.banner {
  height: inherit;
  float: right;
}

.banner img {
  height: inherit;
}


.navigation-menu {
  background-color: #2b2b2b;
  height: 50px;
  text-align: middle;
}
.navigation-menu a {
  color: #FFFFFF;
}

.heading {
  color: #2b5492;
}
.beta-text {
  font-size: 15px;
  vertical-align: top;
  margin-top: -6px;
  display: inline-block;
}

.info-tip {
	padding-right: 15px;
	margin-left: 8px;
	background: url(icon-info-small.gif) no-repeat center right;
}

.content a.info-tip{
  text-decoration:none; 
}

.search {
  display: inline-block;
}

.search-input[type="text"]{
  display: block;
}

.top-tab {
  background:  #ececec!important;
}

.submit-button {
  background: #f9a300;
  font-weight:bold;
}

.user-button {
  background: #0abebf;
  font-weight: bold;
}

div.arrow-label {
  display:inline-block;
}
div.arrow { 
  background:transparent url("/assets/arrows.png") no-repeat scroll 0px -16px; 
  width:16px!important; height:16px!important;
  display:inline-block;
}

.arrow {
  background:transparent url("/assets/arrows.png") no-repeat;
  background-position: right;
  padding: 0px!important;
}

a.arrow-link {
  padding: 8px;
  display: block;
}

div.up { 
  background-position:0px 0px;
}

.tabs {
  border: none;
}
.ui-tabs-anchor{
  color: white!important;
}

.tab-div {
  border: none;
  background: transparent;
}

.tab-inner {
  border: none;
  background: #ececec!important;
}


.ui-tabs-nav { 
    background: transparent; 
    border: none;
    padding: 0!important;
} 

.ui-tabs-anchor{
  border: none;
  background: #bfbfbf;
  text-color: white!important;
}

.medium-textfield{
  width: 200px;
}

.large-textfield{
  width: 300px;
}

.nav-item {
  font-size: 20px;
  display: inline-block;
  *display: inline;
  *zoom: 1;
}

.span2-nav {
  width: 153px !important;
}

.span3-nav {
  width: 250px !important;
}

.right-align {
  float: right;
}

tr.odd {
  background: transparent;
}

tr.even {
  background: #ececec;
}

tr.odd td.sorting_1 {
  background-color: transparent;
}

tr.even td.sorting_1 {
  background: transparent;
}

.top, .bottom {
padding: 0px;
background: transparent;
border: none;
}


tr[role=row]{
  background: #ececec;
}


.sidebar a{
  display:block;
  color: #fff;
}
.sidebar a:hover {

  background: #335884;
  color: #fff;
  text-decoration: none;
}

.sidebar ul{
  width: 100%;
}

.sidebar li{
  line-height: 35px;
}

.sidebar li div{
  height: 100%;
  background: #2b2b2b;
  border: 2px outset buttonface;
  color: #fff;
  text-weight: bold;
}

div.active-button{
  background: #335884!important;
}

.hori-nav{
  margin-left: 300px;
}

.hori-nav li{
  display: inline-block;
  width: 50px;
  text-align: center;
}

.dropdown{
  list-style: none;
}



.no-overflow {
  overflow: hidden;
}

.parent-height{
  height: 100%;
}

.parent-block {
  line-height: 50px;
}

.table{
 table-layout: fixed;
 width: auto;
}



.pagination-link{
  text-decoration: none;
}

.pagination-gap{
  height: 38px;
}
.gap-item{
  border: none;
}



.header-3{
  width: 3%
}

.header-5 {
  width: 5%;
}

.header-7 {
  width: 7%;
}

.header-10 {
  width: 10%;
}

.header-20 {
  width: 20%;
}

.header-15 {
  width: 15%;
}


.graph-options {
  text-indent: 10px;
}

#results{
}

.header {
  font-size: 25px;
  font-weight: bold;
}

.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default 
{ 
  background: #2b2b2b; font-weight: normal/*{fwDefault}*/; color: #555555/*{fcDefault}*/;
}


.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus { background: #335884/*{bgColorHover}*/ url(/assets/jquery-ui/ui-bg_glass_75_dadada_1x400.png)/*{bgImgUrlHover}*/ 50%/*{bgHoverXPos}*/ 50%/*{bgHoverYPos}*/ repeat-x/*{bgHoverRepeat}*/; font-weight: normal/*{fwDefault}*/; color: #212121/*{fcHover}*/; }


.ui-state-active a, .ui-state-active a:link, .ui-state-active a:hover { background: #335884/*{fcActive}*/; text-decoration: none; }
.ui-state-hover a, .ui-state-active a:link, .ui-state-active a:hover { background: #335884/*{fcActive}*/; text-decoration: none; }

.ui-state-active a{ cursor: pointer!important; }

.ui-tabs-vertical { width: 100%; background: transparent; border: none; }
  .ui-tabs-vertical .ui-tabs-nav { float: left; width: 20%; }
  .ui-tabs-vertical .ui-tabs-nav li { clear: left; width: 100%; }
  .ui-tabs-vertical .ui-tabs-nav li a { display:block; float:none; }
  .ui-tabs-vertical .ui-tabs-nav li.ui-tabs-active { }
  .ui-tabs-vertical .ui-tabs-panel {float: right; width: 75%;}


.jstree-default.jstree-focused { 
  background:transparent!important; 
}

.account-text {
  font-size: 17px;
} 
/* ... */

